# open_json

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake
include/: AbstractSerializable.h  CommonDef.h  Deserializer.h  Getter.h  GetterSetterDef.h  Logger.h  SOFactory.h  Serializable.h  Serializer.h  Setter.h  StringUtils.h  TypeTraits.h  Utils.h  open_json.h
include/type_traits/: ConstraintsRemover.h  TypeTraits.h  TypeTraitsBool.h  TypeTraitsChar.h  TypeTraitsDouble.h  TypeTraitsFloat.h  TypeTraitsInt16.h  TypeTraitsInt32.h  TypeTraitsInt64.h  TypeTraitsInt8.h  TypeTraitsLongDouble.h  TypeTraitsString.h  TypeTraitsUInt16.h  TypeTraitsUInt32.h  TypeTraitsUInt64.h  TypeTraitsUInt8.h  TypeTraitsVector.h
src/: open_json.cpp
tests/: CMakeLists.txt  README.md  a.txt
tests/include/: CommonDef.h  EmptyClass.h  RandomGenerator.h
tests/src/: PersonClassTest.cpp  SerializeConstantTest.cpp  SerializeCustomObjectTest.cpp  SerializeDerivedClassTest.cpp  SerializeNestedObjectTest.cpp  SerializePointerTest.cpp  SerializePrimitiveTest.cpp  SerializeVectorTest.cpp  StudentClassTest.cpp  Tutorial.cpp  TypeTraitsTest.cpp  main.cpp
tests/src/deserialize/: ArrayTest.cpp  ClassA.cpp  ClassB.cpp  ClassC.cpp  ClassD.cpp  DeserializeComplexObjectTest1.cpp  DeserializeDerivedNestedObjectTest1.cpp  DeserializeDerivedNestedObjectTest2.cpp  DeserializeDrivedClassTest.cpp  DeserializeEmptyClassTest1.cpp  DeserializeEmptyClassTest2.cpp  DeserializeEnumTest.cpp  DeserializeMapTest.cpp  DeserializeNestedObjectTest.cpp  DeserializeNestedObjectTest1.cpp  DeserializeNestedObjectTest2.cpp  DeserializeNestedObjectTest3.cpp  DeserializeObjectVectorTest1.cpp  DeserializeObjectVectorTest2.cpp  DeserializeObjectVectorTest3.cpp  DeserializePrimitiveTest.cpp  DeserializeRvalueReferenceTest.cpp  DeserializeSharedPtr.cpp  DeserializeUniquePtr.cpp  DeserializeVectorTest.cpp  NullValueTest.cpp  PersonClassTest.cpp  PointerTest.cpp  PrimitivePointerConstantTest.cpp  PrimitivePointerTest.cpp  SimpleObjectTest1.cpp  SimpleObjectTest2.cpp  SimpleObjectTest3.cpp  SimpleObjectTest4.cpp  StudentClassTest.cpp
tests/src/serialize/: ClassA.cpp  ClassB.cpp  ClassC.cpp  ClassD.cpp  NullValueTest.cpp  PersonClassTest.cpp  SerializeConstantTest.cpp  SerializeCustomObjectTest.cpp  SerializeDerivedClassTest.cpp  SerializeDerivedClassTest2.cpp  SerializeEmptyClassTest.cpp  SerializeEmptyClassTest2.cpp  SerializeEnumTest.cpp  SerializeMapTest.cpp  SerializeNestedObjectTest.cpp  SerializeObjectArrayTest.cpp  SerializeObjectVectorTest.cpp  SerializePointerTest.cpp  SerializePrimitiveArrayTest.cpp  SerializePrimitiveTest.cpp  SerializeSharedPtr.cpp  SerializeUniquePtr.cpp  SerializeVectorTest.cpp  SerializeWeakPtr.cpp  SimpleClass1.cpp  SimpleClass2.cpp  SimpleClass3.cpp  StudentClassTest.cpp
tests/src/sofactory/: SimpleClass1.cpp
